--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+Esta es la primera aplicacion "en serio" para trabajar con el tutorial de http://railstutorial.org/
+
+
+
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
